Añadida la tabla de mostrar los datos de los sensores y actualizado el diario y las anotaciones

--- a/AndroidProject/app/src/main/res/values/strings.xml
+++ b/AndroidProject/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
         coste basado en el uso del teléfono móvil y sensores.
     </string>
     <string name="boton_atras">Atrás</string>
+    <string name="datos_enunciado">DATOS LEÍDOS DEL PULSÓMETRO</string>
+    <string name="tabla_pulsaciones">Pulsaciones</string>
+    <string name="tabla_acelerometro">Acelerómetro</string>
 </resources>
